--- a/portfolio.html
+++ b/portfolio.html
@@ -20,14 +20,14 @@
             <nav>
                 <a class="logo" href="./index.html"><span class="logo-text">Web</span>Studio</a>
                 <ul class="list">
-                    <li><a class="button" href="./index.html">Студия</a></li>
-                    <li><a class="button accent" href="">Портфолио</a></li>
-                    <li><a class="button" href="">Контакты</a></li>
+                    <li class="item"><a class="button" href="./index.html">Студия</a></li>
+                    <li class="item"><a class="button accent" href="">Портфолио</a></li>
+                    <li class="item"><a class="button" href="">Контакты</a></li>
                 </ul>
             </nav>
                 <ul class="list">
-                    <li><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a class="contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <li class="item"><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="item"><a class="contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
         </div>
     </header>
@@ -36,19 +36,19 @@
         <div class="container">
             <section>
                 <ul class="list">
-                    <li>
+                    <li class="item">
                         <button class="button-portfolio" type="button">Все</button>
                     </li>
-                    <li>
+                    <li class="item">
                         <button class="button-portfolio" type="button">Веб-сайты</button>
                     </li>
-                    <li>
+                    <li class="item">
                         <button class="button-portfolio" type="button">Приложения</button>
                     </li>
-                    <li>
+                    <li class="item">
                         <button class="button-portfolio" type="button">Дизайн</button>
                     </li>
-                    <li>
+                    <li class="item">
                         <button class="button-portfolio" type="button">Маркетинг</button>
                     </li>
                     </ul>
@@ -56,47 +56,47 @@
                 <h2 class="visually-hidden">Примеры работ</h2>
                     
                 <ul class="example list">
-                    <li>
+                    <li class="item">
                         <img src="./images/imgposter1.jpg" alt="Ноутбук с изображением экрана" width="370">
                         <h3 class="example-title">Технокряк</h3>
                         <p class="example-text">Веб-сайт</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <img src="./images/imgposter2.jpg" alt="Два баскетболиста с мячем" width="370">
                         <h3 class="example-title">Постер New Orlean vs Golden Star</h3>
                         <p class="example-text">Дизайн</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <img src="./images/imgposter3.jpg" alt="Эмблема ресторана" width="370">
                         <h3 class="example-title">Ресторан Seafood</h3>
                         <p class="example-text">Приложение</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <img src="./images/imgposter4.jpg" alt="Наушники" width="370">
                         <h3 class="example-title">Проект Prime</h3>
                         <p class="example-text">Маркетинг</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <img src="./images/imgposter5.jpg" alt="Две коробки" width="370">
                         <h3 class="example-title">Проект Boxes</h3>
                         <p class="example-text">Приложение</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <img src="./images/imgposter6.jpg" alt="Монитор компьютера" width="370">
                         <h3 class="example-title">Inspiration has no Borders</h3>
                         <p class="example-text">Веб-сайт</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <img src="./images/imgposter7.jpg" alt="Открытая книга" width="370">
                         <h3 class="example-title">Издание Limited Edition</h3>
                         <p class="example-text">Дизайн</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <img src="./images/imgposter8.jpg" alt="Этикетка на веревке" width="370">
                         <h3 class="example-title">Проект LAB</h3>
                         <p class="example-text">Маркетинг</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <img src="./images/imgposter9.jpg" alt="Ноутбук на столе" width="370">
                         <h3 class="example-title">Growing Business</h3>
                         <p class="example-text">Приложение</p>
@@ -111,8 +111,8 @@
             <a class="logo" href="./index.html"><span class="logo-text">Web</span><span class="logo-footer">Studio</span></a>
             <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
             <ul class="list">
-                <li><a class="contact-footer" href="mailto:info@example.com">info@example.com</a></li>
-                <li><a class="contact-footer" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                <li class="item"><a class="contact-footer" href="mailto:info@example.com">info@example.com</a></li>
+                <li class="item"><a class="contact-footer" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </div>
     </footer>
