--- a/portfolio.html
+++ b/portfolio.html
@@ -134,10 +134,10 @@
     </main>
 
     <footer>
-        <div class="container">
+        <div class="container footer">
             <a class="logo" href="./index.html"><span class="logo-text">Web</span><span class="logo-footer">Studio</span></a>
             <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-            <ul class="list">
+            <ul class="contacts-footer list">
                 <li class="item"><a class="contact-footer" href="mailto:info@example.com">info@example.com</a></li>
                 <li class="item"><a class="contact-footer" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
